# maoqiu-player

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: package.yml
assets/icons/: maoqiu-player.icns
docs/: PROJECT_PROMPT.md  UI_COPY_GUIDE.md
docs/release-notes/: v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.5.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.2.0.md
installer/windows/: MaoqiuPlayer.iss
maoqiu_player/: __init__.py  app.py  constants.py  media_library.py  media_package.py  models.py  resources.py  updater.py
maoqiu_player/ui/: advanced_tools_page.py  app_window.py  home_page.py  image_viewer_page.py  library_page.py  media_package_page.py  playlist_page.py  settings_page.py  style.py  video_player_page.py  widgets.py
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/maoqiu/player/: MainActivity.java
mobile/android/app/src/main/res/values/: colors.xml  styles.xml
mobile/ios/: project.yml
mobile/ios/MaoqiuPlayer/: ContentView.swift  CryptoUtil.swift  ImageViewerView.swift  Info.plist  LibraryView.swift  MQPPackage.swift  MaoqiuPlayerApp.swift  MediaPickerView.swift  MediaStore.swift  Models.swift  PackageView.swift  PlaylistView.swift  RecentView.swift  SettingsView.swift  Theme.swift  VideoPlayerView.swift
scripts/: generate_icon_assets.py
tests/: test_constants.py  test_image_viewer.py  test_media_package.py  test_updater.py
