[project]
name = "maoqiu-player"
version = "0.1.4"
description = "MaoqiuPlayer, a cross-platform local media player with private media package support."
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "cryptography>=42",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
